...
    @EnvironmentObject private var favoritesViewModel: FavoritesViewModel // Usa o ViewModel compartilhado
    
    var body: some View {
        NavigationStack {
            List {
                if favoritesViewModel.favorites.isEmpty {
                    Text("Nenhum favorito adicionado ainda.")
                        .foregroundColor(.gray)
                        .multilineTextAlignment(.center)
                        .frame(maxWidth: .infinity)
                } else {
                    ForEach(favoritesViewModel.favorites) { favorite in
                        NavigationLink {
...
